--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.556.0",
     "@aws-sdk/s3-request-presigner": "^3.556.0",
+    "@deepgram/sdk": "^3.2.0",
     "@prisma/client": "^5.12.1",
     "aws-sdk": "^2.1603.0",
     "bcryptjs": "^2.4.3",
