--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,7 @@
     "@aws-sdk/client-s3": "^3.556.0",
     "@aws-sdk/s3-request-presigner": "^3.556.0",
     "@deepgram/sdk": "^3.2.0",
+    "@google/generative-ai": "^0.7.1",
     "@prisma/client": "^5.12.1",
     "aws-sdk": "^2.1603.0",
     "bcryptjs": "^2.4.3",
