--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
-    "recoil": "^0.7.7"
+    "recoil": "^0.7.7",
+    "zod": "^3.22.5"
   },
   "devDependencies": {
     "@catppuccin/tailwindcss": "^0.1.6",
